# Lecture-Materials

./: .gitignore  helloWorld.java
fileIO/: CMakeLists.txt  main.cpp
in_class_examples/Chapter05/: basic_function.cpp
in_class_examples/Chapter05/three_ints/: test.cpp
in_class_examples/Chapter08/: 2d_vector.cpp  arrays_func.cpp  reverse.cpp  vector_access.cpp
in_class_examples/Chapter10/: class.cpp  encapsulation.cpp  operator_overload.cpp
sample_code/Chapter01/: CMakeLists.txt  age.cpp  console.cpp  hello_world.cpp  increment.cpp
sample_code/Chapter02/: CMakeLists.txt  auto.cpp  casting.cpp  cstrings.cpp  getline.cpp  math.cpp  random.cpp  variables.cpp
sample_code/Chapter03/: CMakeLists.txt  cstring_comparison.cpp  cstring_copy.cpp  if_statements.cpp  sample.md
sample_code/Chapter04/: CMakeLists.txt  cstring_length.cpp  while_quit.cpp
sample_code/Chapter11/: CMakeLists.txt  arrays.cpp  arrays_md.cpp  const_pointers.cpp  objects.cpp  pointer_arithmetic.cpp  pointers.cpp  vectors_pointers.cpp
sample_code/basics/: CMakeLists.txt
