cmake_minimum_required(VERSION 3.15)
project(sample_code)

set(CMAKE_CXX_STANDARD 14)

add_executable(auto auto.cpp)
add_executable(casting casting.cpp)
add_executable(variables variables.cpp)
add_executable(cstrings cstrings.cpp)
add_executable(math math.cpp)
add_executable(getline getline.cpp)
add_executable(overflow overflow.cpp)
add_executable(random random.cpp)